syntax = "proto3";

option csharp_namespace = "Application";

service User{
  rpc createAccount(CreateAccountMessage) returns (UserMessage);
  rpc login(LoginMessage) returns (BoolMessage);
  rpc getUser(GetUserMessage) returns (UserMessage);
}

message CreateAccountMessage{
  string name = 1;
  int32 licenseNo = 2;//can be null
  int32 phoneNumber = 3;
  string email = 4;
  string password = 5;
}

message UserMessage{
  //not sure what we actually need on client side
  string name = 1;
  int32 phoneNumber = 2;
  string email = 3;
  int32 userId = 4; //is it needed here?
  //look at notes on the bottom and ask about 2/3nd user story
}

message LoginMessage{
  string email = 1;
  string password = 2;
}

message BoolMessage{
  bool status = 1;
  int32 userId = 2;
}

message GetUserMessage{
  int32 userId = 1;
}